--- a/Beegin.html
+++ b/Beegin.html
@@ -452,7 +452,9 @@ body[data-tags~=t8n-warp].transition-out {
 
 
 
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
+
 
 
 </script><tw-passagedata pid="1" name="Beegin+End" tags="" position="74,81">&lt;&lt;audio &quot;bar&quot; loop play&gt;&gt;
@@ -1196,21 +1198,106 @@ You sneak into the unlocked supply closet, and find a stash of royal jelly that&
 &lt;&lt;/nobr&gt;&gt;
 </tw-passagedata>
 <tw-passagedata pid="40" name="Directional Map" tags="" position="785,1233">
+&lt;html&gt;
+    &lt;head&gt;
+        &lt;meta charset=&quot;utf-8&quot;&gt;
+        &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1&quot;&gt;
+  
+    &lt;/head&gt;
+    &lt;body&gt;
+
+        &lt;ul id=&quot;hexGrid&quot;&gt;
+            &lt;li class=&quot;hex&quot;&gt;
+                &lt;a class=&quot;hexIn&quot; href=&quot;&quot;&gt;
+                    &lt;img src=&quot;https://raw.githubusercontent.com/afisher/beegin/master/images/map/Bar.png&quot; alt=&quot;&quot; /&gt;
+                &lt;/a&gt;
+            &lt;/li&gt;
+			
+            &lt;li class=&quot;hex&quot;&gt;
+                &lt;a class=&quot;hexIn&quot; href=&quot;#&quot;&gt;
+                    &lt;img src=&quot;https://raw.githubusercontent.com/afisher/beegin/master/images/map/Chapel.png&quot; alt=&quot;&quot; /&gt;
+                &lt;/a&gt;
+            &lt;/li&gt;
+            &lt;li class=&quot;hex&quot;&gt;
+                &lt;a class=&quot;hexIn&quot; href=&quot;#&quot;&gt;
+                    &lt;img src=&quot;https://raw.githubusercontent.com/afisher/beegin/master/images/map/Hospital.png&quot; alt=&quot;&quot; /&gt;
+                &lt;/a&gt;
+            &lt;/li&gt;
+            &lt;li class=&quot;hex&quot;&gt;
+                &lt;a class=&quot;hexIn&quot; href=&quot;#&quot;&gt;
+                    &lt;img src=&quot;https://raw.githubusercontent.com/afisher/beegin/master/images/map/Park.png&quot; alt=&quot;&quot; /&gt;
+                &lt;/a&gt;
+            &lt;/li&gt;
+            &lt;li class=&quot;hex&quot;&gt;
+                &lt;a class=&quot;hexIn&quot; href=&quot;#&quot;&gt;
+                    &lt;img src=&quot;https://raw.githubusercontent.com/afisher/beegin/master/images/map/Pawn.png&quot; alt=&quot;&quot; /&gt;
+				&lt;/a&gt;
+            &lt;/li&gt;
+            &lt;li class=&quot;hex&quot;&gt;
+                &lt;a class=&quot;hexIn&quot; href=&quot;#&quot;&gt;
+                    &lt;img src=&quot;https://raw.githubusercontent.com/afisher/beegin/master/images/map/badFactory.png&quot; alt=&quot;&quot; /&gt;
+				&lt;/a&gt;
+            &lt;/li&gt;
+            &lt;li class=&quot;hex&quot;&gt;
+                &lt;a class=&quot;hexIn&quot; href=&quot;#&quot;&gt;
+                    &lt;img src=&quot;https://raw.githubusercontent.com/afisher/beegin/master/images/map/collegeKids.png&quot; alt=&quot;&quot; /&gt;
+                  &lt;/a&gt;
+            &lt;/li&gt;
+            &lt;li class=&quot;hex&quot;&gt;
+                &lt;a class=&quot;hexIn&quot; href=&quot;#&quot;&gt;
+                    &lt;img src=&quot;https://raw.githubusercontent.com/afisher/beegin/master/images/map/goodFactory.png&quot; alt=&quot;&quot; /&gt;
+                &lt;/a&gt;
+            &lt;/li&gt;
+            &lt;li class=&quot;hex&quot;&gt;
+                &lt;a class=&quot;hexIn&quot; href=&quot;#&quot;&gt;
+                    &lt;img src=&quot;https://raw.githubusercontent.com/afisher/beegin/master/images/map/housing.png&quot; alt=&quot;&quot; /&gt;
+               &lt;/a&gt;
+            &lt;/li&gt;
+            &lt;li class=&quot;hex&quot;&gt;
+                &lt;a class=&quot;hexIn&quot; href=&quot;#&quot;&gt;
+                    &lt;img src=&quot;https://raw.githubusercontent.com/afisher/beegin/master/images/map/palace.png&quot; alt=&quot;&quot; /&gt;
+                    &lt;/a&gt;
+            &lt;/li&gt;
+            &lt;li class=&quot;hex&quot;&gt;
+                &lt;a class=&quot;hexIn&quot; href=&quot;#&quot;&gt;
+                    &lt;img src=&quot;https://raw.githubusercontent.com/afisher/beegin/master/images/map/jail.png&quot; alt=&quot;&quot; /&gt;
+                &lt;/a&gt;
+            &lt;/li&gt;
+            &lt;li class=&quot;hex&quot;&gt;
+                &lt;a class=&quot;hexIn&quot; href=&quot;#&quot;&gt;
+                    &lt;img src=&quot;https://raw.githubusercontent.com/afisher/beegin/master/images/map/plaza.png&quot; alt=&quot;&quot; /&gt;
+                &lt;/a&gt;
+            &lt;/li&gt;
+            &lt;li class=&quot;hex&quot;&gt;
+                &lt;a class=&quot;hexIn&quot; href=&quot;#&quot;&gt;
+                    &lt;img src=&quot;https://raw.githubusercontent.com/afisher/beegin/master/images/map/school.png&quot; alt=&quot;&quot; /&gt;
+                &lt;/a&gt;
+            &lt;/li&gt;
+            &lt;li class=&quot;hex&quot;&gt;
+                &lt;a class=&quot;hexIn&quot; href=&quot;#&quot;&gt;
+                    &lt;img src=&quot;https://raw.githubusercontent.com/afisher/beegin/master/images/map/taxidermy.png&quot; alt=&quot;&quot; /&gt;
+         &lt;/a&gt;
+            &lt;/li&gt;
+        &lt;/ul&gt;
+    &lt;/body&gt;
+&lt;/html&gt;
+
 [[Main Plaza]]
 [[Go to Good Honey Factory|GHF1]]
 [[Go to Shitty Honey Factory|SHF1]]
 [[Stroll through the Park|Park]]
-[[Ask the college kids if theyve seen anything while, you know, pupating|Dorm Entrance]]
+[[Talk to college kids|Dorm Entrance]]
 [[Derelict Housing]] 
 [[Bar]]
 [[Chapel]] 
-[[Hospital Lobby]] 
+[[Hospital Lobby]]
 [[Pawn Shop]]&lt;&lt;nobr&gt;&gt;
 &lt;&lt;if $sewerOpen&gt;&gt;[[Sewer Entrance (Bar)]]&lt;&lt;endif&gt;&gt;&lt;&lt;/nobr&gt;&gt;
-[[Palace Entrance]] 
+[[Palace Entrance]]
 [[School]]
 [[Jail]]
-[[Taxidermy]] </tw-passagedata>
+[[Taxidermy]] 
+</tw-passagedata>
 <tw-passagedata pid="41" name="GHF3" tags="" position="1092,1245">&lt;&lt;stopallaudio&gt;&gt;\
 &lt;&lt;audio goodFactory loop play&gt;&gt;&lt;&lt;audio goodFactorySFX loop play&gt;&gt;\
 Barbara was right - after the sewers you smell like rotting processed pollen, but you&#39;ve gotten into the GHF without incident. You close your eyes and try to sense the space with all your delicate appendages. The place is filled with echoes so you&#39;re pretty sure you&#39;re alone - at least in this hallway. You&#39;re left-winged and always considered that lucky so you follow the hallway to the left. The Queen Mother must be watching over you, because the first door you come to is....
@@ -1754,7 +1841,6 @@ And all is right with the world.
 
 PAUSE 5 SECONDS YO
 [[Credits]]</tw-passagedata>
-<tw-passagedata pid="80" name="Credits" tags="" position="687,2460">Double-click this passage to edit it.</tw-passagedata>
 </tw-storydata>
 </div>
 	<script id="script-sugarcube" type="text/javascript">
