--- a/Beegin.html
+++ b/Beegin.html
@@ -1307,7 +1307,7 @@ Afterwards: You&#39;ve done all you can there. Best not to risk it, and just duc
 [[Dorm Entrance]] </tw-passagedata>
 <tw-passagedata pid="45" name="Notes on Items" tags="" position="463,4">I am referring to items that are kept by the player inside {brackets like this}.</tw-passagedata>
 <tw-passagedata pid="46" name="Enough Jelly" tags="" position="401,2003">&lt;&lt;stopallaudio&gt;&gt;\
-&lt;&lt;audio parada loop volume 0.4 play&gt;&gt;\
+&lt;&lt;audio parade loop volume 0.4 play&gt;&gt;\
 &lt;&lt;if $royalJelly &gt;= 2&gt;&gt;\
 This passage is put into the bottom of every passage where it&#39;s possible to get enough jelly, except for passages in the palace (those go directly to the palace elder), but only appears when variable jelly is equal to or greater than 2.
 
