more missing logic

--- a/Beegin.html
+++ b/Beegin.html
@@ -1550,12 +1550,13 @@ You start to turn around to see what she was looking at, but she forcefully grab
 	&lt;&lt;/replace&gt;&gt;
 &lt;&lt;/click&gt;&gt;
 
-(ONLY IF GOT JELLY FROM PALACE)
+&lt;&lt;if visited(&quot;Stab him right through goddamn face like the heartless queenfucker you are&quot;) || visited(&quot;Scare him off&quot;)&gt;&gt;
 &lt;&lt;click &quot;\&quot;So, just one little thing. If there&#39;s this //whole supply// of royal jelly in the palace, why didn&#39;t you just give me a key or a sealed letter of entrance or something?\&quot;&quot;&gt;&gt;
 	&lt;&lt;replace &quot;#answer&quot;&gt;&gt;
 	She sighs. &quot;Because that&#39;s not what happened, is it?&quot; You fidget guiltily. &quot;Yes, I know about Burt. He was a good guy - a bit of an accomplished gossip, but a decent sort.&quot; She glances at your face. &quot;I offer no judgement. You did what had to be done. And I do mean that literally. Because you did it, you had to do it. I knew what happened, so, I couldn&#39;t give you an alternate course of action. Understand?&quot; You nod, more out of reflex than anything else. &quot;Good. Anything else you want to know?&quot;
 	&lt;&lt;/replace&gt;&gt;
 &lt;&lt;/click&gt;&gt;
+&lt;&lt;endif&gt;&gt;
 
 &lt;&lt;click &quot;\&quot;Questions can only be answered with words. I will answer with action.\&quot;&quot;&gt;&gt;
 	&lt;&lt;replace &quot;#answer&quot;&gt;&gt;
@@ -1804,7 +1805,7 @@ And all is right with the world.
 &lt;&lt;timed 5s&gt;&gt;
 [[Credits]]
 &lt;&lt;/timed&gt;&gt;</tw-passagedata>
-<tw-passagedata pid="77" name="True begin" tags="" position="382,211">This game is a work of unfinished fiction. Names, characters, businesses, places, events and incidents are either the products of the author&#39;s diseased imagination or used in a fictitious manner. Any resemblance to actual persons, living or dead, or actual events is purely coincidental. Also there may be hiccups and little bugs, but it is hopefully playable all the way through.
+<tw-passagedata pid="77" name="True begin" tags="" position="375,205">This game is a work of unfinished fiction. Names, characters, businesses, places, events and incidents are either the products of the author&#39;s diseased imagination or used in a fictitious manner. Any resemblance to actual persons, living or dead, or actual events is purely coincidental. Also there may be hiccups and little bugs, but it is hopefully playable all the way through.
 
 Also, there is some great music, but it can take a little bit to load. So if you don&#39;t hear any music after clicking the link below, then please check your speakers or wait for it to load.
 
