egmasdfRIIIIIIIDE THE LIIIIIIGHTNINGhnkjsahnfknkljdn
AAAAAAAH KJSDHFKJSDFHKSJDFHKSDJFHDS

RIIIIIIIDE THE LIIIIIIGHTNING

--- a/Beegin.html
+++ b/Beegin.html
@@ -444,7 +444,9 @@ body[data-tags~=t8n-warp].transition-out {
 
 
 
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
+
 
 
 
@@ -751,7 +753,7 @@ if not stole the jelly: there no doctor here name that go away try the universit
 &lt;&lt;display &quot;Directional Map&quot;&gt;&gt;
 &lt;&lt;endif&gt;&gt;\</tw-passagedata>
 <tw-passagedata pid="23" name="GHF1" tags="" position="931,1234">&lt;&lt;stopallaudio&gt;&gt;
-&lt;&lt;audio goodFactory loop play&gt;&gt;&lt;&lt;audio goodFactorySFX loop play&gt;&gt;
+&lt;&lt;audio goodFactory loop play&gt;&gt;&lt;&lt;audio goodFactorySFX loop volume 0.2 play&gt;&gt;
 The GHF is a tall, imposing building, some parts of it almost reaching the top of the hive. 30 percent of the entire hive&#39;s supply is produced here, and it&#39;s not just honey - wax, nectar, pollen stores, even royal jelly - are all produced and/or housed here. While its fortunes have fallen in recent months, the GHF&#39;s stature, both in the community and in terms of literal physicality, continues to loom large.
 
 &lt;&lt;if $warpTimes === 1&gt;&gt;\
@@ -760,7 +762,7 @@ You boldly walk straight up to GHF, but are quickly turned away by security - an
 
 &lt;&lt;display &quot;Directional Map&quot;&gt;&gt;</tw-passagedata>
 <tw-passagedata pid="24" name="SHF1" tags="" position="527,1143">&lt;&lt;stopallaudio&gt;&gt;\
-&lt;&lt;audio badFactory loop play&gt;&gt;&lt;&lt;audio badFactorySFX loop play&gt;&gt;
+&lt;&lt;audio badFactory loop play&gt;&gt;&lt;&lt;audio badFactorySFX loop volume 0.2 play&gt;&gt;
 The SHF is a surprisingly small building for a factory that used to produce 60 percent of the hive&#39;s supply. It is a cheap, barely usable and somewhat illegal product - but in years past hive growth neccessitated that some corners be cut. But not in any year you can remember - and it looks like the building has forgotten its former glory as well. A whole wing seems to be held together with drone spit. You try to forget that all you can afford these days is honey from SHF.
 
 &lt;&lt;if $warpTimes === 1&gt;&gt;
@@ -1284,7 +1286,7 @@ You sneak into the unlocked supply closet, and find a stash of royal jelly that&
 [[Taxidermy]] 
 </tw-passagedata>
 <tw-passagedata pid="41" name="GHF3" tags="" position="1092,1245">&lt;&lt;stopallaudio&gt;&gt;\
-&lt;&lt;audio goodFactory loop play&gt;&gt;&lt;&lt;audio goodFactorySFX loop play&gt;&gt;\
+&lt;&lt;audio goodFactory loop play&gt;&gt;&lt;&lt;audio goodFactorySFX loop volume 0.2 play&gt;&gt;\
 Barbara was right - after the sewers you smell like rotting processed pollen, but you&#39;ve gotten into the GHF without incident. You close your eyes and try to sense the space with all your delicate appendages. The place is filled with echoes so you&#39;re pretty sure you&#39;re alone - at least in this hallway. You&#39;re left-winged and always considered that lucky so you follow the hallway to the left. The Queen Mother must be watching over you, because the first door you come to is....
 
 A room of shelves - all filled with self important glowing jars of prime grade A GHF certified Royal Jelly.
@@ -1811,7 +1813,11 @@ Also, there is some great music, but it can take a little bit to load. So if you
 
 Thanks, and enjoy!
 
-[[Beegin the Game|Beegin+End]]</tw-passagedata>
+[[Beegin the Game|Beegin+End]]
+
+[img[images/BeeProtagonist_3.png]]
+
+[[Credits]]</tw-passagedata>
 </tw-storydata>
 </div>
 	<script id="script-sugarcube" type="text/javascript">
