--- a/Beegin.html
+++ b/Beegin.html
@@ -445,7 +445,9 @@ body[data-tags~=t8n-warp].transition-out {
 
 
 
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
+
 
 
 
@@ -1279,8 +1281,9 @@ You sneak into the unlocked supply closet, and find a stash of royal jelly that&
 [[Chapel]] 
 [[Hospital Lobby]]
 [[Pawn Shop]]
-&lt;&lt;nobr&gt;&gt;
-&lt;&lt;if $sewerOpen&gt;&gt;[[Sewer Entrance (Bar)]]&lt;&lt;endif&gt;&gt;&lt;&lt;/nobr&gt;&gt;
+&lt;&lt;if $sewerOpen&gt;&gt;\
+[[Sewer Entrance (Bar)]]
+&lt;&lt;endif&gt;&gt;\
 [[Palace Entrance]]
 [[School]]
 [[Jail]]
@@ -1532,7 +1535,6 @@ The Elder walks towards you and opens the door with a grim resignation upon her 
 
 You start to turn around to see what she was looking at, but she forcefully grabs you by the shoulder and wrenches you around. &quot;Don&#39;t. Look. Back.&quot; You swallow your anxiety, almost sucessfully. &quot;Now, is there anything you&#39;d like to know?&quot;
 
-
 &lt;&lt;click &quot;\&quot;Why doesn&#39;t anyone seem to remember me once I leave their sight?\&quot;&quot;&gt;&gt;
 	&lt;&lt;replace &quot;#answer&quot;&gt;&gt;
 	&quot;It&#39;s one of the side effects of the Granite Rose. It&#39;s a sort of failsafe, allowing you to repeat an interaction you may have messed up, as well as allowing for multiple yous to interact with the same person out of sequential order. Otherwise things would be even more of a clustercuss. Anything else you want to know?&quot;
@@ -1567,7 +1569,7 @@ You start to turn around to see what she was looking at, but she forcefully grab
 	&lt;&lt;/replace&gt;&gt;
 &lt;&lt;/click&gt;&gt;
 
-&lt;span id=&quot;#answer&quot;&gt;&lt;/span&gt;
+&lt;span id=&quot;answer&quot;&gt;&lt;/span&gt;
 
 &lt;&lt;elseif $warpTimes === 2&gt;&gt;
 You follow the Elder&#39;s directions, and find yourself walking through the back door of the small side room you had been ushered into earlier. You know this because the room looks familiar. And also you see yourself inside, peering through the crack in the door, at... yourself. Beesus, this is getting complicated quick. You sidle in a little ways back from the previous you, and listen to a whole bunch of exposition all over again. So that&#39;s why she told you not to look backwards. Wait, but what would happen if //you// looked...
@@ -1587,13 +1589,7 @@ The Elder grabs your arm and physically yanks you out of your thoughts. It&#39;s
 &quot;Many many trips. Many dances. I know. But it will be worth it. I promise.&quot; You gulp and nod. You really want to look behind yourself now.
 
 [[And you also really, //really//, don&#39;t.|Warp]]
-
-
-
-
-
-
-
+&lt;&lt;endif&gt;&gt;
 </tw-passagedata>
 <tw-passagedata pid="62" name="Fulfill End" tags="" position="556,2155">&lt;&lt;stopallaudio&gt;&gt;&lt;&lt;audio fulfillend loop play&gt;&gt;
 You continue the quest. //Of course// you continue the quest. It was the only choice you could have made. The coming years would only further cement that belief - nay, fact. Each time you danced, you went a little further back in time. Each time you returned to the palace, you were a few hours older. Each time, another you appeared. Another ghost to walk through. Another zombie to ignore. The city was full of them. They //were// the hive. //You// were the hive. Are the hive. Will be.
