thats all she wrote

--- a/Beegin.html
+++ b/Beegin.html
@@ -1045,7 +1045,9 @@ Whether by the guidance of the antenna of fate, or sheer dumb luck, within minut
 
 &lt;&lt;display &quot;Directional Map&quot;&gt;&gt;</tw-passagedata>
 <tw-passagedata pid="33" name="Sewer Exit" tags="" position="1146,1382">&lt;&lt;stopallaudio&gt;&gt;\
-You push open a grate and climb up out of the sewers, shaking the stink off ya, and look around. You&#39;re right outside the [[abandoned nightclub|Abandoned Nightclub]], and you can also see an [[unguarded back entrance to the GHF|GHF3]] a short jog away. Or, if you really want to, you can head back down into the [[sewers|Sewer]].</tw-passagedata>
+You push open a grate and climb up out of the sewers, shaking the stink off ya, and look around. You&#39;re right outside the [[abandoned nightclub|Abandoned Nightclub]], and you can also see an [[unguarded back entrance to the GHF|GHF3]] a short jog away. Or, if you really want to, you can head back down into the [[sewers|Sewer]].
+
+&lt;&lt;display &quot;Directional Map&quot;&gt;&gt;</tw-passagedata>
 <tw-passagedata pid="34" name="Sewer" tags="" position="1271,998">&lt;&lt;stopallaudio&gt;&gt;
 &lt;&lt;audio sewers loop play&gt;&gt;&lt;&lt;audio sewerSFX loop play&gt;&gt;
 
